# pyv

./: .gitignore  Gui.py  Iterate.py  Mid.py  Mid_lambda.py  Plotter.py  Point.py  README.md  Utility.py  clean.sh  constants.py  eps_optimive.bash  eps_to_pdf.bash  exporter.py  folder.sh  geometry.py  gui.py  iterate.py  iterate_3d.py  main.py  main_anim.py  mid.py  mid_3d.py  mid_first_lambda.py  mid_first_lambda_parabolic.py  mid_first_type.py  mid_parab_first_type.py  mid_parab_second_type.py  mid_parab_type_first.py  mid_second_type.py  move.sh  params.json  point.py  pyproject.toml  report  requirements.txt  special_functions.py  test.json  todo  utility.py  (+1 more)
.github/workflows/: build.yml  release.yml
bash/: to_pdf_and_optimize.bash
launcher/: go.mod  main.go
lib/: EEH.json  EEP.json  EHH.json  EHP.json  EPP_2.json  HHH.json  HHP.json  HPP.json  PPH.json  test_checker.py
lib/1 oct/: (-3:-0,3:1)_(1:-0,3:1)_(0:3:1).json  (0,2:3:1)_(-4:3:1)_(-3:0,2:1).json  (0,7:0,7:1)_(-0,7:0,7:1)_(-0,7:-0,7:1).json  (0:0,9:1)_(0,7:-0,7:1)_(-0,7:-0,7:1).json  (0:3:1)_(-3:0:1)_(2:-2:1).json  (0:4:1)_(-4:0:1)_(0:0:1).json  (1,1:1,3:1)_(1,1:-1,3:1)_(3:0:1).json  (1,1:1,6:1)_(1,1:-1,6:1)_(3:1:1).json  (1,1:1:1)_(1,1:-1:1)_(3:1:1).json  (1:1,2:1)_(1:4:1)_(4:0,4:1).json
lib/19 feb/: 4.json  5.json  (+2 more)
src/: Constants.py  Exporter.py  Geometry.py  Gui.py  Iterate2D.py  Iterate3D.py  Mid3D.py  Point.py  SpecialFunctions.py  Utility.py  mid_first_lambda.py  mid_first_lambda_parabolic.py  n-gon.py
strategies/: default.py  even.py  no_2_previous.py  no_previous.py  odd.py  odd_even.py
(+144 files in other folders)
