[project]
name = "pyv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mpmath>=1.3.0",
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "pyopengl>=3.1.10",
    "pyqt6>=6.10.1",
    "pyqtgraph>=0.14.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seval>=1.1.0",
    "shapely>=2.1.2",
]
